--- a/assets/_scss/components/_component.homepage-hero.scss
+++ b/assets/_scss/components/_component.homepage-hero.scss
@@ -51,6 +51,7 @@
 
     &__media-caption {
         @include small-size;
+        line-height: 2;
         margin: 8px 0;
 
         > .ds_icon {
